correcting spellings and changing the spacing aroudnd the icon display

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -179,6 +179,7 @@ margin: 5px;
 }
 .icons-display {
   padding: 5px;
+  margin: 10px;
 }
 
 .container-fluid {
